Removed no longer needed code & fixed subscription tile dark mode styles

--- a/src/kellojo/m/themes/base/src/AnimatedCard.less
+++ b/src/kellojo/m/themes/base/src/AnimatedCard.less
@@ -13,13 +13,3 @@
 .kellojoMAnimatedCard:hover {
     box-shadow: 0 45px 100px rgba(14,21,47,0.4), 0 16px 40px rgba(14,21,47,0.4);
 }
-
-.kellojoMAnimatedCard-shine {
-    position: absolute;
-	top: 0; 
-	left: 0; 
-	right: 0; 
-	bottom: 0;
-	border-radius: @roundBorderRadius;
-	background: linear-gradient(135deg, rgba(255,255,255,.25) 0%,rgba(255,255,255,0) 60%);
-}
