--- a/src/kellojo/m/themes/base/src/SubscriptionTile.less
+++ b/src/kellojo/m/themes/base/src/SubscriptionTile.less
@@ -18,6 +18,7 @@
 
 .kellojoMSubscriptionTile-content {
     margin: @defaultPadding 0;
+    transform: translateZ(5px);
 
     > :not(:last-child) {
         margin-bottom: @defaultPadding;
@@ -26,6 +27,7 @@
 
 .kellojoMSubscriptionTile-submitButton {
     margin-top: auto;
+    transform: translateZ(10px);
 }
 
 
@@ -44,6 +46,7 @@
     .kellojoMSubscriptionTile-price,
     .kellojoMSubscriptionTile-name {
         color: @sapUiContentContrastTextColor;
+        transform: translateZ(10px);
     }
 
     &:hover {
